test/corpus/if_statement/condition_assigment.txt
==========================
Conditional assignment
==========================

# result: {
#    "object": {
#       "x": { "boolean": true, "undefined": true },
#       "y": { "bytes": true, "undefined": true }
#    }
# }

. = {}
_result = if true {
   .x = true
} else {
   .y = "hi"
}
type_def(.)

--------------------------

(program
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (assignment
    left: (assign_target
      (query
        (event)))
    right: (object))
  (assignment
    left: (assign_target
      (ident))
    right: (if_statement
      condition: (predicate
        (boolean))
      (block
        (assignment
          left: (assign_target
            (query
              (event)
              (path
                (field))))
          right: (boolean)))
      (block
        (assignment
          left: (assign_target
            (query
              (event)
              (path
                (field))))
          right: (string)))))
  (function_call
    function_name: (ident)
    arguments: (argument
      (query
        (event)))))
