test/corpus/if_statement/if_else_external_assignment.txt
==========================
If-else external assignment
==========================

# result: true

.a = 5
if true {
  .a = 0.0
} else {
  .a = "string"
}
assert!(.a == 0.0)
assert!(type_def(.a) == {"float": true, "bytes": true})

.a = 5
if false {
  .a = 0.0
} else {
  .a = "string"
}
assert!(.a == "string")
assert!(type_def(.a) == {"float": true, "bytes": true})

--------------------------

(program
  (comment)
  (assignment
    left: (assign_target
      (query
        (event)
        (path
          (field))))
    right: (integer))
  (if_statement
    condition: (predicate
      (boolean))
    (block
      (assignment
        left: (assign_target
          (query
            (event)
            (path
              (field))))
        right: (float)))
    (block
      (assignment
        left: (assign_target
          (query
            (event)
            (path
              (field))))
        right: (string))))
  (function_call
    function_name: (ident)
    arguments: (argument
      (binary_expression
        left: (query
          (event)
          (path
            (field)))
        right: (float))))
  (function_call
    function_name: (ident)
    arguments: (argument
      (binary_expression
        left: (function_call
          function_name: (ident)
          arguments: (argument
            (query
              (event)
              (path
                (field)))))
        right: (object
          (entry
            (key
              (string))
            (value
              (boolean)))
          (entry
            (key
              (string))
            (value
              (boolean)))))))
  (assignment
    left: (assign_target
      (query
        (event)
        (path
          (field))))
    right: (integer))
  (if_statement
    condition: (predicate
      (boolean))
    (block
      (assignment
        left: (assign_target
          (query
            (event)
            (path
              (field))))
        right: (float)))
    (block
      (assignment
        left: (assign_target
          (query
            (event)
            (path
              (field))))
        right: (string))))
  (function_call
    function_name: (ident)
    arguments: (argument
      (binary_expression
        left: (query
          (event)
          (path
            (field)))
        right: (string))))
  (function_call
    function_name: (ident)
    arguments: (argument
      (binary_expression
        left: (function_call
          function_name: (ident)
          arguments: (argument
            (query
              (event)
              (path
                (field)))))
        right: (object
          (entry
            (key
              (string))
            (value
              (boolean)))
          (entry
            (key
              (string))
            (value
              (boolean))))))))
